# ray-tracer

./: CMakeLists.txt  readme.txt
include/: camera.h  hittable.h  image.h  lambertian.h  material.h  mirror.h  plane.h  ray.h  sphere.h  vec3.h
src/: camera.cpp  image.cpp  lambertian.cpp  main.cpp  mirror.cpp  plane.cpp  ray.cpp  sphere.cpp  vec3.cpp
